# Walrus

./: .gitignore  CMakeLists.txt  Makefile  README.md  grammer.md  main.c
include/: walrus.configure.h  walrus.configure.h.in  walrus.h
include/walrus/: common.h  error.h  list.h  map.h  parsing.h  query.h  stream.h
src/: common.c  error.c  export.c  list.c  map.c  numeric.c  parsing.c  stream.c
src/query/: list.c  object.c  query.c  query_w.c  type.c
src/query/include/: _query.h
